2005-08-02 J.R. Heisey <jrheisey@sourceforge.com>
	* src/os_dependent.cc, src/processor.cc,h, src/cod.cc,
	plat/win32/gpsim.def: Fixed a problem where loading a
	program file (no STC) using the GUI resulted source code
	not being found even though that source was in the same
	folder as the program file.

	* gui/gui_menu.cc: Fixed the display of cycle count in
	cycles where %Lx was used in a sprintf instead of the
	platform independent project macro PRINTF_INT64_MODIFIER.

2005-08-02 Scott Dattalo <scott@dattalo.com>
	* src/16bit-processors.cc, src/p18x.cc: The new I/O port register
	symbols were getting added to the symbol table twice. Also, the
	eeprom peripheral for some of the 18f devices was not getting
	created.

2005-08-02 J.R. Heisey <jrheisey@sourceforge.com>
	src/cmd_gpsim.h
	* src/cod.cc: Removed an error message from PicCodProgramFileType::
	open_a_file() that is handled externally.

	* src/registers.cc: Fixed a bug in RegisterValue::toString()
	not displaying enough digits.

	* src/value.h, src/symbol.h, src/registers.h, gui/gui_register.h:
	Added some conversion and equals operators.

	* cli/ui_gpsim.cc, src/cmd_gpsim.h: Added several string
	formatting routines.

	* plat/win32/gpsim.def: Updated for new pin I/o routines.

	* gui/gui_watch.cc, gui/gui_watch.h: Updated display of values
	to account for uninitialized bits and bit masked register
	symbols.

2005-08-01 Scott Dattalo <scott@dattalo.com>
	* src/p16x5x.h, src/p16x5x.cc: Upgraded the P16C54 and P16C55 to
	the new I/O port design.

	* src/16bit-processors.cc, src/16bit-registers.cc,
	src/16bit-registers.h, src/p18x.cc, src/p18x.h:
	Completed converting the 16-bit core I/O ports to the new I/O
	redesign (note - the peripheral-to-I/O mapping still needs to be
	completed). 

	* src/ioports.h, src/ioports.cc: deprecated the old PIC_IOPORT
	class and all of its children.
	
2005-08-01 Scott Dattalo <scott@dattalo.com>
	* src/14bit-processors.cc, src/14bit-processors.h,