@@ -1242,65 +1242,6 @@ void RCREG_16::pop(void)
 
 USART_MODULE16::USART_MODULE16(void)
 {
-  cout << "usart 16 constructor\n";
-  cout << "USART_MODULE16::constructor txreg => " << txreg.name() << "\n";
-#if 0
-  rcsta = new _RCSTA;
-  txsta = new _TXSTA;
-
-  txreg = new TXREG_16;
-  rcreg = new RCREG_16;
-  spbrg = new _SPBRG;
-#endif
-}
-
-//--------------------------------------------------
-void USART_MODULE16::initialize_16(_16bit_processor *new_cpu, PIR_SET *pir_set,
-    IOPORT *uart_port)
-//void USART_MODULE16::initialize(_16bit_processor *new_cpu)
-
-{
-  _cpu16 = new_cpu;
-
-  spbrg.txsta = &txsta;
-  spbrg.rcsta = &rcsta;
-
-  txreg.assign_pir_set(pir_set);
-  txreg.txsta = &txsta;
-
-  txsta.txreg = &txreg;
-  txsta.spbrg = &spbrg;
-  txsta.txpin = uart_port->pins[6];
-  txsta.bit_count = 0;
-
-  rcsta.rcreg = &rcreg;
-  rcsta.spbrg = &spbrg;
-  rcsta.txsta = &txsta;
-  rcsta.uart_port = uart_port;
-  rcsta.rx_bit = 7;
-
-  rcreg.assign_pir_set(pir_set);
-  rcreg.rcsta = &rcsta;
-
-}
-
-void   USART_MODULE16::init_ioport(IOPORT *new_ioport)
-{
-  if(!new_ioport)
-    return;
-
-  txsta.txpin = new_ioport->pins[6];
-
-  rcsta.uart_port = new_ioport;
-
-}
-
-void  USART_MODULE16::new_rx_edge(unsigned int bit)
-{
-
-  if( (rcsta.state == _RCSTA::RCSTA_WAITING_FOR_START) && !bit)
-    rcsta.receive_start_bit();
-  //  cout << "USART_MODULE16::new_rx_edge\n";
 }
 
 //-------------------------------------------------------------------
